
2003-10-15 Version 1.32b 20Oct03 Beta
22Oct03
- Print block read error (checksum, I/O, BB01, ...) once then
  the number found at the end of the reading.
- Implement RunAfterFailedJob
- Change db_find_job_start_time() to require a Full save before
  running an Incremental or Differential job.
- Remove has_volume_expired from code that updates vol info
21Oct03
- Implement "delete job"
20Oct03
- More documentation, add Marc Brueckner's tips to manual.
- Tweak gnome2-console scroll window.
- Turn off some debug info.
18Oct03
- Modify Verify to accept VerifyJob = xx, where the last backup job
  of job xxx will be verified.
- Add changing the Pool name for a Volume to "update volume"
- Write most of the code for Verify Disk to Catalog.
- Recreate the src/gnome2-console directory.
- Change all the text handling code to the Gnome 2.0 way.
- Correct the way verify filenames are returned to the Director so
  that directories are in canonical form (i.e. trailing /).
- Handle casting bug in glade-2 by sed'ing support.c in gnome2-console.

2003-10-15 Version 1.32b 14Oct03 Release
14Oct03
- Modify configure so that if threaded MySQL client library
  is not present, Bacula will link with the non-threaded 
  version.
- Updates to the Web pages and to the manual.
- Remove trademark symbol from title. Phil pointed out that it
  does not display correctly in a title.
11Oct03
- Implement restore by file before date. 
- Change restore arguments a bit so that you can feed it
  multiple jobid= specifications or multiple file= specifications.
- Pass restore with run option on to run_cmd.
- Make run-cmd not prompt if it has a "run" on the command line.
10Oct03
- When pruning, select only old orphanned jobs to delete so that
  the current job is not pruned too.
09Oct03
- Corrected return status for bsf_dev and bsr_dev in block.c and btape.c
- dev.c used incorrect ruturn status for bsf_dev in the BSF at EOM
  code. This caused all appends on FreeBSD to fail.